Decrease Java version dependency to java 11